atualização 26/08